@@ -44,10 +44,8 @@ Matches against
 property.
 .It Ar include audience
 Previous match is applied against
-.Fa to
-and
-.Fa cc
-fields as well.
+.It Ar only unknowns
+Previous (domain) match is applied only to unknown actors.
 .It Ar text
 Regular expression match against the post
 .Fa content .
@@ -97,6 +95,9 @@ that can be matched against and will appear if the post is collapsed.
 .Pp
 An optional expiration may be specified as a duration.
 XdYhZm for X days, Y hours, and Z minutes.
+.Sh EXAMPLES
+A rudimentary spam filter may be constructed with where set to mastodon.social,
+checking the only unknowns option, with an action of reject.
 .Sh SEE ALSO
 .Xr honk 1
 .Sh CAVEATS
