@@ -2,6 +2,8 @@ changelog
 
 ### next
 
++ Filter option to match unknown actors.
+
 + Update some dependencies.
 
 + Watch local.css for changes.
